# LLM_Ops

./: .clangd  CMakeLists.txt  compile_commands.json  test.cu
.cache/clangd/index/: device_query.cu.47F84465A5BDC4F4.idx  device_query.cuh.7FF4D886609E8E01.idx  test.cu.22ED826457FA6D18.idx
run/: test.py  test_elementwise.py  test_gemm.py
scripts/: llm_ops.pyi
scripts/llm_ops/: __init__.pyi  elementwise.pyi  gemm.pyi  m_utils.pyi
source/bindings/: binding.cpp
source/host/: device_query.cpp  device_query.cu  laucher.h  launcher.cu  launcher.h
source/kernels/elementwise/: elementwise_add.cuh
source/kernels/gemm/: sgemm.cuh  sgemm_1D_tile.cuh  sgemm_coalesce.cuh  sgemm_naive.cuh  sgemm_sm.cuh
source/kernels/gemm/profile_report/: gemm.md
source/kernels/reduce/: reduce.cuh
source/kernels/relu/: relu.cuh
source/kernels/sigmoid/: sigmoid.cuh
source/utils/: device_query.cuh  device_query.h  util.cuh
